// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar renders correctly 1`] = `
<nav
  className="NavbarItems"
>
  <h1
    className="navbar-logo"
  >
    <i
      className="fas fa-cash-register"
    />
  </h1>
  <div
    className="menu-icon"
    onClick={[Function]}
  >
    <i
      className="fas fa-bars"
    />
  </div>
  <ul
    className="nav-menu"
  >
    <li>
      <a
        className="navbar-links"
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li>
      <a
        className="navbar-links"
        href="/login"
        onClick={[Function]}
      >
        Log in
      </a>
    </li>
    <li>
      <a
        href="/signup"
        onClick={[Function]}
      >
        <button
          className="btn btn--primary btn--medium"
          id="nav-signup"
        >
          Sign Up
        </button>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`SharedRoute renders correctly when anonymous 1`] = `
<button
  className="btn btn--primary btn--medium"
  id="undefined"
>
  anonymous
</button>
`;

exports[`SharedRoute renders correctly when logged in 1`] = `
<button
  className="btn btn--primary btn--medium"
  id="undefined"
>
  user
</button>
`;

exports[`Sign-Up shows something 1`] = `
<div
  className="form-main"
>
  <h2>
    SignUp
  </h2>
  <span
    className="form-error"
  />
  <form
    className="form"
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label>
        E-mail:
      </label>
      <input
        className="form-control"
        defaultValue=""
        name="email"
        onChange={[Function]}
        type="email"
      />
      <span
        className="error"
        id="email-error"
      />
    </div>
    <div
      className="form-group"
    >
      <label>
        Password:
      </label>
      <input
        className="form-control"
        defaultValue=""
        name="password1"
        onChange={[Function]}
        type="password"
      />
      <span
        className="error"
        id="password1-error"
      />
    </div>
    <div
      className="form-group"
    >
      <label>
        Re-Enter Password:
      </label>
      <input
        className="form-control"
        defaultValue=""
        name="password2"
        onChange={[Function]}
        type="password"
      />
      <span
        className="error"
        id="password2-error"
      />
    </div>
    <div
      className="form-group form-buttons"
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <a
        className="btn btn-secondary"
        href="/login"
        onClick={[Function]}
      >
        Login
      </a>
    </div>
    <div
      className="form-group form-buttons"
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <button
        className="btn btn-secondary"
      >
        Sign-Up
      </button>
    </div>
  </form>
</div>
`;
